[project]
name = "edin"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx",
    "pandas",
    "numpy",
    "scikit-learn",
    "scipy",
    "matplotlib",
    "seaborn",
]


[tool.uv]
link-mode = 'symlink'

[dependency-groups]
dev = [
    "ipykernel",
]
